<resources>
    <string name="app_name">Alpha</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">YOUR_CLIENT_ID.apps.googleusercontent.com</string>
    <string name="event_date_and_time">Event Date and Time</string>
    <string name="event_location">Event Location</string>
    <string name="close">Close</string>
    <string name="notification_preferences">Notification Preferences</string>
    <string name="enable_push_notifications">Enable Push Notifications</string>
    <string name="enable_email_notifications">Enable Email Notifications</string>
    <string name="enable_sms_notifications">Enable SMS Notifications</string>
    <string name="theme_selection">Theme Selection</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="system_default">System Default</string>
    <string name="privacy_preferences">Privacy Preferences</string>
    <string name="allow_location_access">Allow Location Access</string>
    <string name="share_usage_data">Share Usage Data</string>
    <string name="language_selection">Language Selection</string>
    <string name="logout">Logout</string>
    <string name="date_and_time">Date and Time</string>
    <string name="location">Location</string>
    <string name="add_event">Add Event</string>
    <string name="create_a_new_event">Create a New Event</string>
    <string name="event_title">Event Title</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="login_with_biometric" translatable="false">Login with Biometric</string>
    <string name="welcome_to_alpha_event_planner">Welcome to Alpha Event Planner</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">ABOUT US</string>
    <string name="app_description">App Description</string>
    <string name="alpha_event_planner_is_a_mobile_application_designed_to_help_users_plan_and_manage_their_events_efficiently_it_allows_users_to_create_events_track_their_details_the_app_provides_insights_into_upcoming_events_and_ensures_a_user_friendly_experience_with_features_like_search_edit_and_delete_options">Alpha Event Planner is a mobile application designed to help users plan and manage their events efficiently. It allows users to create events, track their details. The app provides insights into upcoming events and ensures a user-friendly experience with features like search, edit, and delete options.</string>
    <string name="key_features">Key Features</string>
    <string name="event_management_create_edit_and_delete_events_n_notifications_get_notified_to_create_events">• Event Management: Create, edit, and delete events\n• Notifications: Get notified to create events.</string>
    <string name="contact_us">Contact Us</string>
    <string name="q1_how_do_i_create_an_event">Q1: How do I create an event?</string>
    <string name="q2_how_can_i_edit_or_delete_an_event">Q2: How can I edit or delete an event?</string>
    <string name="to_edit_or_delete_an_event_tap_on_the_event_in_the_list_you_will_see_options_to_edit_or_delete_it">To edit or delete an event, tap on the event in the list. You will see options to edit or delete it.</string>
    <string name="q3_how_do_i_sync_my_events_across_devices">Q3: How do I sync my events across devices?</string>
    <string name="your_events_are_synced_using_jsonbin_a_cloud_based_json_storage_service_make_sure_you_are_connected_to_the_internet_for_real_time_synchronization">Your events are synced using JSONBIN, a cloud-based JSON storage service. Make sure you are connected to the internet for real-time synchronization.</string>
    <string name="q4_what_happens_if_the_network_goes_down">Q4: What happens if the network goes down?</string>
    <string name="if_the_network_goes_down_you_can_still_create_events_they_will_be_saved_locally_and_synced_once_the_network_is_restored">If the network goes down, you can still create events. They will be saved locally and synced once the network is restored.</string>
    <string name="q5_how_does_the_search_functionality_work">Q5: How does the search functionality work?</string>
    <string name="use_the_search_bar_at_the_top_of_the_screen_to_filter_events_by_title_date_or_location_the_list_of_events_will_update_automatically_as_you_type">Use the search bar at the top of the screen to filter events by title, date, or location. The list of events will update automatically as you type.</string>
    <string name="q6_how_do_i_view_events_on_the_map">Q6: How do I view events on the map?</string>
    <string name="to_view_events_on_the_map_navigate_to_the_map_section_of_the_app_you_will_see_all_event_locations_marked_and_you_can_tap_each_marker_for_more_details">To view events on the map, navigate to the map section of the app. You will see all event locations marked, and you can tap each marker for more details.</string>
    <string name="privacy">Privacy</string>
    <string name="data_collection">Data Collection</string>
    <string name="we_collect_personal_data_such_as_name_email_address_and_event_details_to_improve_user_experience_and_for_the_functionality_of_the_app_data_is_stored_locally_and_synced_to_the_cloud">We collect personal data such as name, email address, and event details to improve user experience and for the functionality of the app. Data is stored locally and synced to the cloud.</string>
    <string name="data_usage">Data Usage</string>
    <string name="your_personal_data_is_used_for_managing_events_providing_event_reminders_and_ensuring_synchronization_between_your_devices_we_do_not_share_your_data_with_third_parties_unless_required_by_law">Your personal data is used for managing events, providing event reminders, and ensuring synchronization between your devices. We do not share your data with third parties unless required by law.</string>
    <string name="data_security">Data Security</string>
    <string name="we_take_the_security_of_your_data_seriously_we_implement_industry_standard_security_measures_to_ensure_that_your_personal_data_is_protected_from_unauthorized_access">We take the security of your data seriously. We implement industry-standard security measures to ensure that your personal data is protected from unauthorized access.</string>
    <string name="data_retention">Data Retention</string>
    <string name="we_retain_your_personal_data_only_as_long_as_it_is_necessary_for_the_purposes_outlined_in_this_policy_or_as_required_by_law_once_your_data_is_no_longer_needed_we_securely_delete_it">We retain your personal data only as long as it is necessary for the purposes outlined in this policy, or as required by law. Once your data is no longer needed, we securely delete it.</string>
    <string name="user_rights">User Rights</string>
    <string name="as_a_user_you_have_the_right_to_access_modify_or_delete_your_personal_data_you_can_also_opt_out_of_data_collection_and_usage_by_contacting_us_at_any_time">As a user, you have the right to access, modify, or delete your personal data. You can also opt-out of data collection and usage by contacting us at any time.</string>
    <string name="to_create_an_event_follow_the_labels_on_the_event_creation_screen">To create an event, follow the labels on the event creation screen.</string>
    <string name="location_of_event">Location of Event</string>
    <string name="register">Register</string>
    <string name="input_email">Input Email</string>
    <string name="register_account">Register Account</string>
    <string name="login_page">Login Page</string>
    <string name="signup_with_google">Signup With Google</string>
    <string name="account_password">Account Password</string>
    <string name="register_with_google">Register With Google</string>
    <string name="share">Share</string>


</resources>
