<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:clipToPadding="false"
        android:clipChildren="false">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_preferences"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/pushNotificationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_push_notifications"
            app:trackTint="#A9ABAE"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_selection"
            android:textStyle="bold"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface" />

        <RadioGroup
            android:id="@+id/themeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/lightTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light_theme"
                android:textColor="?attr/colorOnSurface" />

            <RadioButton
                android:id="@+id/darkTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme"
                android:textColor="?attr/colorOnSurface" />

            <RadioButton
                android:id="@+id/systemDefaultTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_default"
                android:textColor="?attr/colorOnSurface" />
        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_preferences"
            android:textStyle="bold"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/allowLocationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allow_location_access"
            app:trackTint="#A9ABAE"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/shareUsageDataSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_usage_data"
            app:trackTint="#A9ABAE"
            android:textColor="?attr/colorOnSurface" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_selection"
            android:textStyle="bold"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <Spinner
                android:id="@+id/languageSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="#3F51B5"
                android:entries="@array/languages_array"
                android:spinnerMode="dropdown" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#FF0000"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp" />


    </LinearLayout>

</ScrollView>
